# http2

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  config.json  readme.md
.github/: dependabot.yml
.github/workflows/: main.yml
src/: broker.rs  client_ip.rs  conf.rs  events.rs  extractor.rs  handlers.rs  lib.rs  main.rs  metrics.rs  observability.rs  publisher.rs  responses.rs  rmq.rs  router.rs  routes.rs  signals.rs  subscriber.rs  types.rs
src/responses/: errors.rs  statuses.rs
tests/: client_ip_test.rs  handlers_test.rs  integration_test.rs  routes_test.rs
