[package]
name = "http2"
version = "0.0.15"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
json_env_logger2 = "^0.2"
kv-log-macro = "^1.0"
tokio = { version = "^1", features = ["full"] }
axum = { version = "^0.6", features = ["headers", "http2"] }
hyper = { version = "^1.4", features = ["full"] }
tower = { version = "^0.4", features = ["make"] }
tower-http = { version = "^0.5", features = ["cors", "limit"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "^0.11"
serde_bytes_wrapper = "0.1.0"
serde_json = "^1.0"
bytes = "^1"
lapin = "^2.3"
deadpool = "^0.12"
deadpool-lapin = "^0.12"
futures = "^0.3"
time = "^0.3"
libc = "^0.2"
tokio-executor-trait = "^2.1"
tokio-reactor-trait = "^1.1"
url = "^2.5"
http-body = "^1.0"
async-trait = "^0.1"

[dependencies.uuid]
version = "^1.9"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.rmp]
version = "^0.8"

[dependencies.rmp-serde]
version = "^1.3"