[package]
name = "http2"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
json_env_logger2 = "^0.2"
kv-log-macro = "^1.0"
tokio = { version = "^1", features = ["full"] }
axum = { version = "^0.6", features = ["headers", "http2"] }
tower = { version = "^0.5", features = ["make"] }
tower-http = { version = "^0.6", features = ["cors", "limit"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "^0.11"
serde_bytes_wrapper = "0.1.0"
serde_json = "^1.0"
futures = "^0.3"
libc = "^0.2"
http-body = "^1.0"
async-nats = "0.40.0"
rmp-serde= "^1.1"

[dependencies.uuid]
version = "^1.16"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.rmp]
version = "^0.8"
