[package]
name = "http2"
version = "0.1.3"
edition = "2021"
publish = false

[[bin]]
name = "http2"
path = "src/main.rs"

[lib]
name = "http2"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
json_env_logger2 = "0.2.1"
kv-log-macro = "1.0.7"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8.4", features = ["http2", "macros"] }
tower = { version = "0.5.1", features = ["make"] }
tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_bytes = "0.11.15"
serde_bytes_wrapper = "0.1.0"
serde_json = "1.0.132"
futures = "0.3.31"
libc = "0.2.164"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
async-nats = "0.38.0"
rmp-serde = "1.3.0"

# OpenTelemetry dependencies for distributed tracing
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus metrics dependencies
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dependencies.uuid]
version = "1.11.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.rmp]
version = "0.8.14"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.14.0"
tower = { version = "0.5.1", features = ["util"] }
